main.css
* {
    box-sizing: border-box;
    text-align: center;
    font-size: 35px;
    margin: 0;
    font-family: 'Raleway', sans-serif;
    --bg-color: #8978fa;
    --nav-height: 10%;
  }

nav, footer {
    position: fixed;
    width: 100%;
    background-color: var(--bg-color);
    height: 60px;
}

nav {
    top: 0px;
    left: 0px;
    padding-right: 30px;

  }

footer {
    bottom: 0px;
    left: 0px;
    padding: 0 10%;
    display: flex;
    justify-content: space-around;
}

section {
      
      width: 100%;
      padding: 2%;
  }

main {
    margin-top: 60px;
    margin-bottom: 80px;
}

h1 {
    padding-top: 20px;
    font-size: 50px;
    font-weight: normal;
    font-family: 'Indie Flower', cursive; 
}

p {
    font-size: 20px;
    text-align: left;
}

.bio > p {
    padding: 20px;
}

.hero {
    font-size: 50px;
    font-family: 'Indie Flower', cursive;  
}


.specalties{
    height: 300px;
}

.project {
    border: 2px solid black;
    border-radius: 10px;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    margin-bottom: 40px;
    display: flex;
    flex-direction: column;
}

.projectText  > p {
    padding: 10px;
    text-align: center;
}

.projectText {
    margin: auto;
    padding: 20px;
}

ul {
    display: none;
    list-style: none;
    justify-content: flex-end;
}

li {
    padding-left: 20px;
    font-size: 30px;
}

.hamburger {
    text-align: right;
}

.hamburger:hover {
    cursor: pointer;
}

.projectImg {
    width: 80%;
    border: 2px solid black;
    margin-left: auto;
    margin-right: auto;
}

.js-miniMenu {
    display: flex;
    flex-direction: column;
    background-color: var(--bg-color);
    width: 150px;
    position: fixed;
    right: 0;
}



.hero > img {
    margin-top: 30px;
    height: 200px;
    width: 200px;
    border: 3px solid var(--bg-color);
    border-radius: 50%;
    
}

.hero > h1 {
    font-size: 60px;
}

.hero > h2 {
    font-size: 30px;
    font-weight: normal;
}

.page-break {
    border-top: 4px dashed var(--bg-color);
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
}

ul {
    list-style: none;
    padding: 10px;
}

li {
    font-size: 25px;
    display: inline;

}

a {
    color: black;
    font-size: 25px;
    text-decoration: none;
}

a:hover {
    color: #78d7fa;
    cursor: pointer;
} 

.logo > img {
    height: 50px;
    border: 2px solid black;
    border-radius: 50%;
    float: left;
    margin-left: 20px;
    margin-top: 5px;
}

.container > p {
    line-height: 1.5;
    padding: 0 20px;

}

.specalties > img {
    height: 100px;
}

.specalties > h1 {
    margin-bottom: 30px;
}

.contact > img {
    margin-top: 5px;
    height: 50px;
}

.container > img {
    height: 300px;
    border: 3px solid var(--bg-color);
    border-radius: 20px;
}

.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 20px 0;

}

.bio {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

.right {
    flex-direction: row-reverse;
}


@media screen and (min-width: 1010px) {
    .project {
        flex-direction: row;
    }

    .projectImg {
        width: 50%;
    }

    .futureImg {
        margin-left: 10px;
    }
}


@media screen and (max-width: 850px) {
    .container {
        flex-direction: column;
    }

    .container > p {
        padding: 20px 0;
    }

    .right {
        flex-direction: column;
    }
}
@media screen and (min-width: 850px) {
    .hamburger {
        display: none;
    }

    ul {
        display: flex;

    }


}

